--- a/css/style.css
+++ b/css/style.css
@@ -264,10 +264,12 @@ body {
 }
 
 .review {
+  /* position: relative; */
   background-image: url("../img/paw.svg");
   background-size: 312px 267px;
   background-repeat: no-repeat;
   background-position: top -100px right -50px;
+  overflow: hidden;
 }
 
 .review__list {
@@ -312,6 +314,24 @@ body {
   font-size: 14px;
   color: #848484;
 }
+
+/* .review::after {
+  content: "";
+  position: absolute;
+
+  top: -100px;
+  right: -50px;
+
+  width: 312px;
+  height: 267px;
+
+
+  /* content: url("../img/paw.svg"); */
+  background-image: url("../img/paw.svg");
+  background-size: 312px 267px;
+  background-repeat: no-repeat;
+  /* background-position: top -100px right -50px; */
+} */
 
 .contacts {
   display: flex;
