--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,11 @@ body {
   color: #1a212f;
 }
 
+a {
+  text-decoration: none;
+  color: #1A212F;
+}
+
 .page-main {
   overflow-x: hidden;
 }
@@ -222,19 +227,16 @@ body {
 }
 
 .rooms {
+  padding-right: 168px;
   background-image: url("../img/fish.svg");
   background-size: 484px 151px;
   background-repeat: no-repeat;
   background-position: top left;
 }
 
-.rooms__wrapper {
-  display: flex;
-  padding-right: 168px;
-}
-
 .rooms__list {
   margin-left: 168px;
+  margin-bottom: 55px;
 }
 
 .rooms__item {
@@ -287,6 +289,33 @@ body {
 
 .btn--room-booking {
   margin-bottom: 40px;
+}
+
+.breadcrumbs {
+  width: 70px;
+  margin: auto;
+}
+
+.breadcrumbs__item {
+  display: inline-flex;
+  width: 12px;
+  height: 12px;
+  margin-right: 12px;
+}
+
+.breadcrumbs__item:nth-last-child(1) {
+  margin-right: 0;
+}
+
+.breadcrumbs__circle {
+  width: 12px;
+  height: 12px;
+  background-color: #E1E1E1;
+  border-radius: 50%;
+}
+
+.breadcrumbs__item>.active {
+  background-color: #FAC663;
 }
 
 .review {
